# CorsoFastAPI

./: .gitignore  README.md  pyproject.toml
01/: main.py
02/01type_hints/: con_type_hints.py  senza_type_hints.py
02/02async_await/: async_scrape.py  sync_scrape.py
02/03data_classes/: ordini_pyd.py  ordini_std.py  pyproject.toml
03/: main.py
03/api/: chetempofa_api.py
03/models/: localita.py
03/services/: openweather_servizio.py
03/templates/home/: index.html
03/templates/shared/: layout.html
04/api/: chetempofa_api.py
04/infrastructure/: meteo_cache.py
05/: main.py  settings_template.json
05/api/: chetempofa_api.py
05/models/: reports.py
05/services/: openweather_servizio.py  report_servizio.py
05/templates/home/: index.html
05/templates/shared/: layout.html
05/views/: home.py
06/pycash/: database.db  sql_model.py  sql_model_01.py  sql_model_02.py  sql_model_fast_01.py  sql_model_fast_02.py  sql_model_fast_06.py
materiale_raw/: FastAPI-01.pptx  FastAPI-02.pptx  FastAPI-03.pptx  FastAPI-04.pptx  FastAPI-05.pptx  FastAPI-API Intro.pptx  FastAPI-PBG.pptx  Note.txt
