[tool.poetry]
name = "CorsoFastAPI"
version = "0.1.0"
description = "Imparare FastAPI"
authors = [
    "Burlesco70"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Burlesco70/CorsoFastAPI"
repository = "https://github.com/Burlesco70/CorsoFastAPI"
documentation = "https://github.com/Burlesco70/CorsoFastAPI"

classifiers = [
    "Topic :: Learn FastAPI"
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
httpx = "^0.18.1"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
flake8-isort = "4.0.0"
flake8-builtins = "1.5.3"
autopep8 = "1.5.7"
pylint = "2.8.2"
bandit = "1.7.0"
black = "21.5b0"
mypy = "0.812"
flake8-bandit = "2.1.2"
flake8-mypy = "17.8.0"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
autoflake = "^1.3.1"
